--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,6 @@
     "passport-local": ">= 0.0.0",
     "mongodb": ">= 0.0.0",
     "mongoose": ">= 0.0.0",
-    "bcrypt": ">= 0.0.0"
+    "scrypt": ">= 0.0.0"
   }
 }
